[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyssp"
version = "0.0.1"
readme = "README.md"
license = "LICENSE.txt"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
    "--cov=pyssp"
]

[tool.pylama]
format = "pylint"
linters = "pylint,pyflakes,pycodestyle,pydocstyle"
ignore = "C0116,C0103,D213,D401,D415"
