[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssp"
version = "0.0.1"
readme = "README.md"
license = "LICENSE.txt"

[tool.pytest.ini_options]
pythonpath = "."
log_cli = true
addopts = [
    "--import-mode=importlib",
    "--cov=ssp"
]

[tool.ruff]
include = ["ssp/**"]

line-length = 100
indent-width = 4
target-version = "py312"
extend-exclude = [".pyenv*"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E",
          "F",
          "B",
          "I",
          "SIM",
          "W",
          "D",
          "PL",
          "NPY",
          "PERF",
          "C90",
          "RUF",
          "D417", "D414"]
ignore = ["D213", "D401", "D211"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
mypy_path = "ssp"
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
plugins = "numpy.typing.mypy_plugin"
files = ["ssp/*.py"]
